--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,299 +8,136 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
     <TextView
-        android:id="@+id/tvDisplay"
-        android:layout_width="0dp"
+        android:id="@+id/displayTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:textSize="24sp"
-        android:textAlignment="center"
+        android:gravity="end"
         android:textColor="@android:color/black"
-        android:text="0"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"/>
+        android:text="0"/>
 
-    <!-- Buttons for numbers -->
-    <Button
-        android:id="@+id/btn1"
-        android:layout_width="0dp"
+    <GridLayout
+        android:layout_below="@id/displayTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1"
-        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn2"/>
+        android:layout_marginTop="16dp"
+        android:columnCount="4">
 
-    <Button
-        android:id="@+id/btn2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="2"
-        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
-        app:layout_constraintStart_toEndOf="@id/btn1"
-        app:layout_constraintEnd_toStartOf="@id/btn3"/>
+        <!-- Calculator buttons -->
+        <Button
+            android:id="@+id/btn_7"
+            android:layout_column="0"
+            android:text="7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btn3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="3"
-        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
-        app:layout_constraintStart_toEndOf="@id/btn2"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_8"
+            android:layout_column="1"
+            android:text="8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btn4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="4"
-        app:layout_constraintTop_toBottomOf="@id/btn1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn5"/>
+        <Button
+            android:id="@+id/btn_9"
+            android:layout_column="2"
+            android:text="9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btn5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="5"
-        app:layout_constraintTop_toBottomOf="@id/btn2"
-        app:layout_constraintStart_toEndOf="@id/btn4"
-        app:layout_constraintEnd_toStartOf="@id/btn6"/>
+        <Button
+            android:id="@+id/btn_divide"
+            android:layout_column="3"
+            android:text="/"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btn6"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="6"
-        app:layout_constraintTop_toBottomOf="@id/btn3"
-        app:layout_constraintStart_toEndOf="@id/btn5"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_4"
+            android:layout_column="0"
+            android:text="4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btn7"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="7"
-        app:layout_constraintTop_toBottomOf="@id/btn4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn8"/>
+        <Button
+            android:id="@+id/btn_5"
+            android:layout_column="1"
+            android:text="5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btn8"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="8"
-        app:layout_constraintTop_toBottomOf="@id/btn5"
-        app:layout_constraintStart_toEndOf="@id/btn7"
-        app:layout_constraintEnd_toStartOf="@id/btn9"/>
+        <Button
+            android:id="@+id/btn_6"
+            android:layout_column="2"
+            android:text="6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btn9"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="9"
-        app:layout_constraintTop_toBottomOf="@id/btn6"
-        app:layout_constraintStart_toEndOf="@id/btn8"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_multiply"
+            android:layout_column="3"
+            android:text="*"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <!-- Button for zero -->
-    <Button
-        android:id="@+id/btn0"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="0"
-        app:layout_constraintTop_toBottomOf="@id/btn8"
-        app:layout_constraintStart_toStartOf="@id/btn8"
-        app:layout_constraintEnd_toEndOf="@id/btn8"/>
+        <Button
+            android:id="@+id/btn_1"
+            android:layout_column="0"
+            android:text="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <!-- Buttons for arithmetic operations -->
-    <Button
-        android:id="@+id/btnAdd"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="+"
-        app:layout_constraintTop_toBottomOf="@id/btn3"
-        app:layout_constraintStart_toEndOf="@id/btn3"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_2"
+            android:layout_column="1"
+            android:text="2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btnSubtract"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="-"
-        app:layout_constraintTop_toBottomOf="@id/btn6"
-        app:layout_constraintStart_toEndOf="@id/btn6"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_3"
+            android:layout_column="2"
+            android:text="3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btnMultiply"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="*"
-        app:layout_constraintTop_toBottomOf="@id/btn9"
-        app:layout_constraintStart_toEndOf="@id/btn9"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_subtract"
+            android:layout_column="3"
+            android:text="-"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btnDivide"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="/"
-        app:layout_constraintTop_toBottomOf="@id/btn0"
-        app:layout_constraintStart_toEndOf="@id/btn0"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_0"
+            android:layout_column="0"
+            android:text="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <!-- Button for decimal point -->
-    <Button
-        android:id="@+id/btnDecimal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="."
-        app:layout_constraintTop_toBottomOf="@id/btn0"
-        app:layout_constraintStart_toStartOf="@id/btn0"
-        app:layout_constraintEnd_toStartOf="@id/btnDivide"/>
+        <Button
+            android:id="@+id/btn_dot"
+            android:layout_column="1"
+            android:text="."
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <!-- Button for equals -->
-    <Button
-        android:id="@+id/btnEquals"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="="
-        app:layout_constraintTop_toBottomOf="@id/btnDivide"
-        app:layout_constraintStart_toEndOf="@id/btnDivide"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_equal"
+            android:layout_column="2"
+            android:text="="
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <!-- Button for clear -->
-    <Button
-        android:id="@+id/btnClear"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="C"
-        app:layout_constraintTop_toBottomOf="@id/btnMultiply"
-        app:layout_constraintStart_toEndOf="@id/btnMultiply"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_column="3"
+            android:text="+"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-
-
-    <!-- Buttons for numbers -->
-    <Button
-        android:id="@+id/btn1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="1"
-        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn2"
-        tools:ignore="DuplicateIds" />
-
-    <!-- Add buttons for numbers 2-9 -->
-
-    <!-- Button for zero -->
-    <Button
-        android:id="@+id/btn0"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="0"
-        app:layout_constraintTop_toBottomOf="@id/btn8"
-        app:layout_constraintStart_toStartOf="@id/btn8"
-        app:layout_constraintEnd_toEndOf="@id/btn8"
-        tools:ignore="DuplicateIds" />
-
-    <!-- Button for decimal point -->
-    <Button
-        android:id="@+id/btnDecimal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="."
-        app:layout_constraintTop_toBottomOf="@id/btn0"
-        app:layout_constraintStart_toStartOf="@id/btn0"
-        app:layout_constraintEnd_toStartOf="@id/btnDivide"
-        tools:ignore="DuplicateIds" />
-
-    <!-- Buttons for arithmetic operations -->
-    <TextView
-        android:id="@+id/tvDisplay"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:text="0"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        tools:ignore="DuplicateIds" />
-
-    <!-- Buttons for numbers -->
-    <Button
-        android:id="@+id/btn1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="1"
-        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn2"
-        tools:ignore="DuplicateIds" />
-
-    <!-- Add buttons for numbers 2-9 -->
-
-    <!-- Button for zero -->
-    <Button
-        android:id="@+id/btn0"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="0"
-        app:layout_constraintTop_toBottomOf="@id/btn8"
-        app:layout_constraintStart_toStartOf="@id/btn8"
-        app:layout_constraintEnd_toEndOf="@id/btn8"
-        tools:ignore="DuplicateIds" />
-
-    <!-- Button for decimal point -->
-    <Button
-        android:id="@+id/btnDecimal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="."
-        app:layout_constraintTop_toBottomOf="@id/btn0"
-        app:layout_constraintStart_toStartOf="@id/btn0"
-        app:layout_constraintEnd_toStartOf="@id/btnDivide"
-        tools:ignore="DuplicateIds" />
-
-    <!-- Buttons for arithmetic operations -->
-    <Button
-        android:id="@+id/btnAdd"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="+"
-        app:layout_constraintTop_toBottomOf="@id/btn3"
-        app:layout_constraintStart_toEndOf="@id/btn3"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="DuplicateIds" />
-
-    <!-- Add buttons for subtraction, multiplication, and division -->
-
-    <!-- Button for equals -->
-    <Button
-        android:id="@+id/btnEquals"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="="
-        app:layout_constraintTop_toBottomOf="@id/btnDivide"
-        app:layout_constraintStart_toEndOf="@id/btnDivide"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="DuplicateIds" />
-
-    <!-- Button for clear -->
-    <Button
-        android:id="@+id/btnClear"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="C"
-        app:layout_constraintTop_toBottomOf="@id/btnMultiply"
-        app:layout_constraintStart_toEndOf="@id/btnMultiply"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="DuplicateIds" />
+    </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
