--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,21 @@
 <resources>
     <item name="btnMultiply" type="id" />
     <item name="btn0" type="id" />
+    <item name="btn_2" type="id" />
+    <item name="btn_1" type="id" />
+    <item name="btn_multiply" type="id" />
+    <item name="btn_6" type="id" />
+    <item name="btn_5" type="id" />
+    <item name="btn_4" type="id" />
+    <item name="btn_divide" type="id" />
+    <item name="btn_9" type="id" />
+    <item name="btn_8" type="id" />
+    <item name="btn_7" type="id" />
+    <item name="displayTextView" type="id" />
+    <item name="btn_3" type="id" />
+    <item name="btn_subtract" type="id" />
+    <item name="btn_0" type="id" />
+    <item name="btn_dot" type="id" />
+    <item name="btn_equal" type="id" />
+    <item name="btn_add" type="id" />
 </resources>
